--- a/ghostty/config
+++ b/ghostty/config
@@ -6,3 +6,5 @@ window-padding-y = 15
 window-save-state = always
 
 keybind = ctrl+j=goto_split:next
+keybind = cmd+d=new_split:down
+keybind = cmd+shift+d=new_split:right
