--- a/ghostty/config
+++ b/ghostty/config
@@ -1,5 +1,7 @@
+theme = Rose Pine
+
 font-family = JetBrains Mono
-font-size   = 20
+font-size   = 18
 
 window-padding-x = 15
 window-padding-y = 15
