added shared .zshrc with common config, updated ghostty tab title behavior to always show current directory

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 !/nvim/**
 !/ghostty/**
 !starship.toml
+!.zshrc
 
 # Ignore local files which should be configured individually
 nvim/lua/local/*.lua
